--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <section id="container">
-        <img src="img/button_emergencia.png" alt="Botão de emergência" id="botao" display="none">
+        <img src="img/button_emergencia.png" alt="Botão de emergência" id="botao" display="none" width="100%" height="100%">
     </section>
     <script src="app.js"></script>
 </body>
